[tool.poetry]
name = "extract-elevation-mapillary"
version = "0.1.0"
description = ""
authors = ["jnnkB <29376715+jnnkB@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "extract_elevation_mapillary"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
requests = "^2.31.0"
geojson = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
